--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,15 +15,15 @@ jobs:
         cl main.cpp /O2 /GL /EHsc /std:c++17 /I %SFMLpath%/include/ /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:%SFMLpath%/lib sfml-window.lib sfml-graphics.lib sfml-system.lib
 
 
-    - name: run
-      run: |
-        main.exe 
-      shell: cmd
-    - name: upload executable
-      uses: actions/upload-artifact@v2
-      with:
-        name: windows
-        path: |
-          main.exe
+    # - name: run
+    #   run: |
+    #     main.exe 
+    #   shell: cmd
+    # - name: upload executable
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: windows
+    #     path: |
+    #       main.exe
   
           
