--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,16 +1,83 @@
-name: Compile main cpp
+name: build (Windows/MSVC + SFML)
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  SZ_SFML_ROOT: tmp/SFML
+  _SFML_PACK_NAME: windows-vc17-64.zip
+  _SFML_DOWNLOAD_PACK: https://artifacts.sfml-dev.org/by-branch/master/${{ _SFML_PACK_NAME }}
+  # NOTE: pkg. layout: ./<commit-hash>/[lib|include|...]
+  _SFML_DOWNLOAD_DIR: tmp
+
+  # Configuration type to build.
+  # You can convert this to a build matrix if you need coverage of multiple configuration types.
+  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  #BUILD_CONFIGURATION: Release
+
+permissions:
+  contents: read
 
 jobs:
-  windows:
-    name: run on windows
+  build:
     runs-on: windows-latest
+# This is too scrict, e.g. would prevent trying alternate builds etc.:
+#    strategy:
+#      fail-fast: false
+    
     steps:
-    - uses: actions/checkout@v2
-    - uses: ilammy/msvc-dev-cmd@v1.13.0
-    - name: compile
-      run: | 
-        cl main.cpp /O2 /GL /EHsc /std:c++17 /I %SFMLpath%/include/ /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:%SFMLpath%/lib sfml-window.lib sfml-graphics.lib sfml-system.lib  
-          
+
+    - name: Checkout...
+      uses: actions/checkout@v3
+
+#    - name: TEST wget (Not mentioned in the Win. runner toolset!)
+#      run: wget -h
+# WELL: NOT installed! (So much about lots of download actions on the marketplace...)
+
+#    - name: Install prerequisites (wget...)
+#      run: choco install wget
+
+    - name: Setup MSVC/CLI dev. env.
+      uses: ilammy/msvc-dev-cmd@v1.13.0
+
+    - name: Setup SFML...
+      shell: cmd
+      run: tooling/sfml_dl+unzip
+
+    #  From sources (on GitHub):
+    #- uses: actions/checkout@master
+    #  with:
+    #    repository: SFML/SFML
+    #    path: tmp
+    #    ref: refs/heads/master
+    #    #??commit: a4bca20567d744c04929b1fc7135cdb845c7c4f6
+    #    # -> https://github.com/actions/checkout/issues/24
+
+    - name: Download custom-built full-static SFML pack
+      shell: cmd
+      run: tooling\busybox sh tooling/sfml-setup-MSVCRT-static-addon
+
+    - name: Download & build zstd
+      shell: cmd
+      run: extern/zstd/build-msvc static
+
+    - name: Build OON with NMAKE + Jumpstart-NG
+      #working-directory: ${{env.GITHUB_WORKSPACE}}
+      shell: cmd
+      # No static-CRT version in stock SFML downloadable prebuilts, so:
+      run: nbuild
+# CRT=dll
+      #!! This would mask any make error exit codes! :-/
+      #run: tooling\diag\wtime nbuild.cmd
+
+    - name: Build OON with BusyBox-w32 + my exp. BB makefile
+      #working-directory: ${{env.GITHUB_WORKSPACE}}
+      shell: cmd
+      #!! This would mask any make error exit codes! :-/
+      #run: tooling\diag\wtime bbuild.cmd
+      run: bbuild-msvc
+# CRT=dll
