--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,7 +10,8 @@ on:
 env:
   SZ_SFML_ROOT: tmp/SFML
   _SFML_PACK_NAME: windows-vc17-64.zip
-  _SFML_DOWNLOAD_PACK: https://artifacts.sfml-dev.org/by-branch/master/${{ _SFML_PACK_NAME }}
+  _SFML_DOWNLOAD_PACK: https://artifacts.sfml-dev.org/by-branch/master/windows-vc17-64.zip
+# _SFML_DOWNLOAD_PACK: https://artifacts.sfml-dev.org/by-branch/master/${{ _SFML_PACK_NAME }}
   # NOTE: pkg. layout: ./<commit-hash>/[lib|include|...]
   _SFML_DOWNLOAD_DIR: tmp
 
