--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -43,8 +43,8 @@ jobs:
 
     - name: compile
       run: | 
-        echo %SZ_SFML_ROOT%
-        cl src\*.cpp /O2 /GL /EHsc /std:c++17 /I %SZ_SFML_ROOT%/include/ /link /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:%SZ_SFML_ROOT%/lib sfml-window.lib sfml-graphics.lib sfml-system.lib
+        echo $SZ_SFML_ROOT
+        cl src\*.cpp /O2 /GL /EHsc /std:c++17 /I $SZ_SFML_ROOT/include/ /link /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:$SZ_SFML_ROOT/lib sfml-window.lib sfml-graphics.lib sfml-system.lib
 
 
     # - name: Download custom-built full-static SFML pack
