--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -41,9 +41,10 @@ jobs:
       shell: cmd
       run: tooling/sfml_dl+unzip
 
+    - name: test env
+      run: echo "${{ env.SZ_SFML_ROOT }}"
     - name: compile
       run: | 
-        run: echo "${{ env.SZ_SFML_ROOT }}"
         cl src\*.cpp /O2 /GL /EHsc /std:c++17 /I ${{ env.SZ_SFML_ROOT }}/include/ /link /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:${{ env.SZ_SFML_ROOT }}/lib sfml-window.lib sfml-graphics.lib sfml-system.lib
 
 
