--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -25,10 +25,6 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-# This is too scrict, e.g. would prevent trying alternate builds etc.:
-#    strategy:
-#      fail-fast: false
-    
     steps:
 
     - name: Checkout...
@@ -49,18 +45,20 @@ jobs:
         cl src\*.cpp /O2 /GL /EHsc /std:c++17 /I ${{ env.SZ_SFML_ROOT }}/include/ /link /OUT:bin\main.exe /OPT:REF /OPT:ICF /LTCG /INCREMENTAL:NO /DYNAMICBASE /LIBPATH:${{ env.SZ_SFML_ROOT }}/lib sfml-window.lib sfml-graphics.lib sfml-system.lib
     
     - name: Upload main.exe as an artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
           name: main-exe-artifact
           path: bin/main.exe
-  # download:
-  #   needs: build
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Download main.exe artifact
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: main-exe-artifact
-  #         path: downloaded_bin
-  #     - name: List contents of downloaded_bin directory
-  #       run: dir downloaded_bin
+  download:
+    needs: build
+    runs-on: windows-latest
+
+    steps:
+      - name: Download main.exe artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: main-exe-artifact
+          path: downloaded_bin
+
+      - name: List contents of downloaded_bin directory
+        run: dir downloaded_bin
